src/test/Success/test_sym1.c
int func();
int func();

int main(){
    func();
}

int func(){
    return 1;
}

int func();