src/test/Fail/test_undec1.c
int add(){
    return 0;
}

int main(){
    add(x);
}